package ChessGame;

public class Bishop extends Piece {
    public Bishop(Player var1) {
        super(var1, "B");
    }

    public boolean isValidMove(Tile var1, Board var2) {
        return true;
    }

    @Override
    public void Tile(Tile tile) {

    }
}
