package ChessGame;

public class King extends Piece {
    public King(Player var1) {
        super(var1, "K");
    }

    public boolean isValidMove(Tile var1, Board var2) {
        return true;
    }

    @Override
    public void Tile(Tile tile) {

    }
}