package ChessGame;

public class Pawn extends Piece {
    public Pawn(Player var1) {
        super(var1, "P");
    }

    public boolean isValidMove(Tile var1, Board var2) {
        return true;
    }

    @Override
    public void Tile(Tile tile) {

    }
}
