package ChessGame;

public class Queen extends Piece {
    public Queen(Player var1) {
        super(var1, "Q");
    }

    public boolean isValidMove(Tile var1, Board var2) {
        return true;
    }

    @Override
    public void Tile(Tile tile) {

    }
}
