@startuml

title __CHESSGAME's Class Diagram__\n

  namespace ChessGame {
    class ChessGame.Bishop {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Board {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Chess {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Chess$1 {
    }
  }
  

  namespace ChessGame {
    class ChessGame.King {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Knight {
    }
  }
  

  namespace ChessGame {
    class ChessGame.MoveListener {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Pawn {
    }
  }
  

  namespace ChessGame {
    abstract class ChessGame.Piece {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Player {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Queen {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Rook {
    }
  }
  

  namespace ChessGame {
    class ChessGame.Tile {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Bishop {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Board {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Chess {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Chess$1 {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.King {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Knight {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.MoveListener {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Pawn {
    }
  }
  

  namespace src.ChessGame {
    abstract class src.ChessGame.Piece {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Player {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Queen {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Rook {
    }
  }
  

  namespace src.ChessGame {
    class src.ChessGame.Tile {
    }
  }
  

  ChessGame.Bishop -up-|> ChessGame.Piece
  ChessGame.Board -up-|> javax.swing.JPanel
  ChessGame.Chess -up-|> javax.swing.JFrame
  ChessGame.Chess o-- ChessGame.Player : blackPlayer
  ChessGame.Chess o-- ChessGame.Board : board
  ChessGame.Chess o-- ChessGame.Player : currentPlayer
  ChessGame.Chess o-- ChessGame.Player : whitePlayer
  ChessGame.Chess$1 -up-|> java.awt.event.WindowAdapter
  ChessGame.Chess$1 o-- ChessGame.Chess : this$0
  ChessGame.King -up-|> ChessGame.Piece
  ChessGame.Knight -up-|> ChessGame.Piece
  ChessGame.MoveListener -up-|> java.awt.event.MouseAdapter
  ChessGame.MoveListener o-- ChessGame.Chess : game
  ChessGame.MoveListener o-- ChessGame.Tile : startTile
  ChessGame.Pawn -up-|> ChessGame.Piece
  ChessGame.Piece o-- ChessGame.Tile : Tile
  ChessGame.Piece o-- ChessGame.Player : owner
  ChessGame.Queen -up-|> ChessGame.Piece
  ChessGame.Rook -up-|> ChessGame.Piece
  ChessGame.Tile -up-|> java.awt.Canvas
  ChessGame.Tile o-- ChessGame.Piece : piece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
